<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Logger</string>
    <string name="menu_settings">Settings</string>
    <string name="b1on">Start Measuring</string>
    <string name="b1off">Stop Measuring</string>
    <string name="b2off">Stop Logging</string>
    <string name="b2on">Start Logging</string>
    <string name="prec">Prec:</string>
    <string name="sats">Alt:</string>
    <string name="undef">Undef</string>
    <string name="lat">Lat: </string>
    <string name="lon">Lon: </string>
    <string name="noSensor">Unit has no</string>
    <color name="bgStats">#222222</color>
    <color name="colStats">#33b5e5</color>
    <color name="satStats">#7ddf00</color>
    <color name="andBlue">#33b5e5</color>
    <color name="white">#ffffff</color>
    <color name="almwhite">#e0e0e0</color>
    <color name="ltgrey">#363636</color>
    <color name="btgrey">#515151</color>
    <color name="dkgrey">#111111</color>

</resources>