<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgStats"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
     <LinearLayout
     	android:layout_width="fill_parent"
		android:layout_height="2dp"
    	android:background="@color/andBlue"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical" >
   	</LinearLayout>
   	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="12dp"
            android:onClick="toggleMeasuring"
            android:textColor="@color/white"
            android:background="@drawable/my_button"
            android:textOff="@string/b1on"
            android:textOn="@string/b1off" />

        <ToggleButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginLeft="6dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/my_button"
            android:textColor="@color/white"
            android:layout_weight="50"
            android:onClick="toggleLogging"
            android:textOff="@string/b2on"
            android:textOn="@string/b2off" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:gravity="center_vertical|right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="6pt" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="6pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undef"
                android:textColor="@color/colStats"
                android:textSize="6pt" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undef"
                android:textColor="@color/colStats"
                android:textSize="6pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:gravity="center_vertical|right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prec"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="6pt" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sats"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="6pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undef"
                android:textColor="@color/colStats"
                android:textSize="6pt" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undef"
                android:textColor="@color/colStats"
                android:textSize="6pt" />
        </LinearLayout>
        

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <ProgressBar
                android:id="@+id/progressBar1"
 				android:maxHeight="40dip" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>
    </LinearLayout>
    
    
     <LinearLayout
     	android:layout_width="fill_parent"
		android:layout_height="2dp"
    	android:background="@color/andBlue"
        android:gravity="center_vertical"
        android:orientation="vertical" >
   	</LinearLayout>
   	
     
     
     <LinearLayout
     	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:orientation="vertical" >
        
       	<TextView
          	android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="5pt" />
   	</LinearLayout>
     
     
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/ltgrey" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="16dp"
            	android:layout_marginRight="16dp"
            	android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="5pt" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>